refactor: streamline ItemController and UserController
- Move validation logic from controllers to Item and User models using ItemValidator and UserValidator.
- Relocate error handling to UserServiceImpl and ItemServiceImpl services for cleaner controller operations.
- Enhance and integrate ExceptionFactory and GlobalExceptionHandler more tightly into the application.
- Implement LoggingAspect for improved logging and extend logging coverage for complex parts of the program.